dialog board fixed bg color and gaps

--- a/src/components/dialog/dialog.module.scss
+++ b/src/components/dialog/dialog.module.scss
@@ -5,7 +5,7 @@
     transform: translate(-50%, -50%);
     padding: 80px 32px;
     min-width: 440px;
-    background-color: #fff;
+    background-color: var(--primary1);
     animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
@@ -19,12 +19,12 @@
 .title {
     font: var(--heading4);
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
 }
 
 .description {
     font: var(--paragraph1);
-    margin-bottom: 24px;
+    margin-bottom: 34px;
     text-align: center;
 }
 
